# Komplex_tervezes

./: .gitignore  LICENSE  SzemánBalázs_téma_240226.md  TODO_source_2.ipynb  citation.md  main.ipynb  pyproject.toml  requirements.txt  sentiment_analysis_for_source_1.ipynb  sentiment_analysis_source_1.ipynb  sentiment_analyzer.py
CD/Program/data/output/: GOOG_sentiment.csv  MRK_sentiment.csv  MSFT_sentiment.csv  MS_sentiment.csv  NVDA_sentiment.csv  QQQ_sentiment.csv
docs/: citation.md
docs/latex/: GEALT031B Szakdolgozat kiiras-minta_BI-L.doc
docs/latex/szakdolgozat/: dolgozat.bib  dolgozat.tex
docs/latex/szakdolgozat/chapters/: 2_concept.tex  3_design.tex  6_summary.tex
docs/latex/szakdolgozat/styles/: cpp.sty  dolgozat.sty  java.sty  python.sty
input/: AppleNewsStock.csv
input/source_1/: AppleNewsStock.csv
input/source_2/: newsdata_labelled_v2.csv
latex/: latexhez.ipynb
src/code/: notebook.ipynb  notebook.tex  notebook_old.tex  notebook_old2.tex  sentiment_analyzer.py  text_backup.ipynb
src/code/unused/: gui.py  preprocess_data.py
src/data/input/processed/source/: GOOG.csv  MRK.csv  MSFT.csv  MU.csv  O.csv  QQQ.csv
src/data/input/processed/source_1/: AppleNewsStock.csv  MicrosoftNewsStock.csv
src/data/input/raw/source_1/: MicrosoftNewsStock.csv
src/data/output/: GOOG_sentiment.csv  MRK_sentiment.csv  MSFT_sentiment.csv  MS_sentiment.csv  MU_sentiment.csv  MicrosoftNewsStock.csv  MicrosoftNewsStock_new.csv  MicrosoftNewsStock_test.csv  MicrosoftNewsStock_test2.csv  NVDA_sentiment.csv  O_sentiment.csv  QQQ_sentiment.csv
(+5 files in other folders)
